RESOLVED FIXED21241
REGRESSION (r36977): getRGBColorValue().red returning incorrect value
https://bugs.webkit.org/show_bug.cgi?id=21241
Summary REGRESSION (r36977): getRGBColorValue().red returning incorrect value
Alexey Proskuryakov
Reported 2008-09-30 07:29:13 PDT
I'm getting an assertion failure with today's ToT, see attached test case.
Attachments
test case (assertion failure) (217 bytes, text/html)
2008-09-30 07:30 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2008-09-30 07:30:19 PDT
Created attachment 23940 [details] test case (assertion failure) ASSERTION FAILED: getValue (/Users/ap/Safari/OpenSource/WebKitBuild/Debug/JavaScriptCore.framework/PrivateHeaders/PropertySlot.h:136 void JSC::PropertySlot::setCustom(JSC::JSValue*, JSC::JSValue* (*)(JSC::ExecState*, const JSC::Identifier&, const JSC::PropertySlot&))) 0 com.apple.WebCore 0x035dbb1b JSC::PropertySlot::setCustom(JSC::JSValue*, JSC::JSValue* (*)(JSC::ExecState*, JSC::Identifier const&, JSC::PropertySlot const&)) + 125 (PropertySlot.h:136) 1 com.apple.WebCore 0x039ab857 bool JSC::getStaticValueSlot<WebCore::JSRGBColor, WebCore::DOMObject>(JSC::ExecState*, JSC::HashTable const*, WebCore::JSRGBColor*, JSC::Identifier const&, JSC::PropertySlot&) + 197 (lookup.h:199) 2 com.apple.WebCore 0x039ab5d3 WebCore::JSRGBColor::getOwnPropertySlot(JSC::ExecState*, JSC::Identifier const&, JSC::PropertySlot&) + 55 (JSRGBColor.cpp:55) 3 com.apple.JavaScriptCore 0x008f09fb JSC::JSValue::get(JSC::ExecState*, JSC::Identifier const&, JSC::PropertySlot&) const + 187 (JSObject.h:430)
Alexey Proskuryakov
Comment 2 2008-10-03 07:58:14 PDT
OK, looks like this is just how bug 21235 looks in debug builds.
Cameron Zwarich (cpst)
Comment 3 2008-10-08 13:33:04 PDT
This is also detectable in Release builds, because the actual value returned is the getter function, rather than a CSSPrimitiveValue.
Cameron Zwarich (cpst)
Comment 4 2008-10-08 13:40:31 PDT
*** Bug 21235 has been marked as a duplicate of this bug. ***
Cameron Zwarich (cpst)
Comment 5 2008-10-08 16:00:56 PDT
This is caused by r36977: http://trac.webkit.org/changeset/36977 I am assigning this to Sam, because he knows the fix.
Sam Weinig
Comment 6 2008-10-08 17:15:13 PDT
Fixed in 37432.
Benoit Marchant
Comment 7 2008-10-08 17:29:29 PDT
Thanks!
Note You need to log in before you can comment on or make changes to this bug.