WebCore:

2008-10-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Cameron Zwarich.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=21241
        REGRESSION (r36977): getRGBColorValue().red returning incorrect value

        Update JSRGBColor to use the new static function per getter approach.

        Test: fast/dom/css-RGBValue.html

        * bindings/js/JSRGBColor.cpp:
        (WebCore::):
        (jsRGBColorRed):
        (jsRGBColorGreen):
        (jsRGBColorBlue):
        * bindings/js/JSRGBColor.h:

LayoutTests:

2008-10-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Cameron Zwarich.

        Test for https://bugs.webkit.org/show_bug.cgi?id=21241
        REGRESSION (r36977): getRGBColorValue().red returning incorrect value

        * fast/dom/css-RGBValue.html: Added.
        * fast/dom/resources/css-RGBValue.js: Added.



Canonical link: https://commits.webkit.org/29678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37432 268f45cc-cd09-0410-ab3c-d52691b4dbfc