WebCore/bindings/js/JSRGBColor.h
@@ -32,12 +32,9 @@ namespace WebCore {
         JSRGBColor(JSC::ExecState*, unsigned color);
 
         virtual bool getOwnPropertySlot(JSC::ExecState*, const JSC::Identifier&, JSC::PropertySlot&);
-        JSC::JSValue* getValueProperty(JSC::ExecState*, int token) const;
 
         virtual const JSC::ClassInfo* classInfo() const { return &s_info; }
         static const JSC::ClassInfo s_info;
-
-        enum { Red, Green, Blue };
 
         unsigned impl() const { return m_color; }
 
