third_party/WebKit/LayoutTests/fast/dom/resources/css-RGBValue.js
@@ -1,0 +1,12 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description("This test ensures that objects RGBColor objects return the correct values.");
+
+var element = document.createElement('div');
+document.documentElement.appendChild(element);
+element.style.color = "rgb(10, 20, 30)";
+
+shouldBe("window.getComputedStyle(element, '').getPropertyCSSValue('color').getRGBColorValue().red.getFloatValue(CSSPrimitiveValue.CSS_NUMBER)", "10");
+shouldBe("window.getComputedStyle(element, '').getPropertyCSSValue('color').getRGBColorValue().green.getFloatValue(CSSPrimitiveValue.CSS_NUMBER)", "20");
+shouldBe("window.getComputedStyle(element, '').getPropertyCSSValue('color').getRGBColorValue().blue.getFloatValue(CSSPrimitiveValue.CSS_NUMBER)", "30");
+
+successfullyParsed = true;
